# sfframework

sfframework/: CMakeLists.txt  package.xml  sfframework_filter_plugins.xml  sfframework_partitioner_plugins.xml  sfframework_sf_plugins.xml
sfframework/include/sfframework/: cluster_types.hpp  exceptions.hpp  filter_base.hpp  partitioning_cluster.hpp  partitioning_context.hpp  partitioning_strategy.hpp  sf_strategy.hpp  sfgenerator.hpp  sfgenerator_utils.hpp
sfframework/msg/: CompressedHapticMap.msg  StochasticVertex.msg
sfframework/src/: compressed_stochastic_polygon_strategy.cpp  default_filters.cpp  default_partitioners.cpp  default_sf_strategies.cpp  gaussian_repulsion_strategy.cpp  parabolic_rest_strategy.cpp  plane_inclination_from_imu_linear_strategy.cpp  plane_inclination_strategy.cpp  sfgenerator.cpp  sfgenerator_utils.cpp  weighted_summation_strategy.cpp
sfframework_msgs/: CMakeLists.txt  package.xml
sfframework_msgs/msg/: ScalarField2D.msg
sfframework_py/: package.xml  setup.cfg  setup.py
sfframework_py/sfframework_py/: sfgenerator.py
sfframework_rviz/: CMakeLists.txt  package.xml  rviz_common_plugins.xml
sfframework_rviz/include/sfframework_rviz/: ScalarField2DDisplay.hpp
sfframework_rviz/src/: ScalarField2DDisplay.cpp
sfframework_simulation/: CMakeLists.txt  package.xml
sfframework_simulation/config/: rbkairos_controller_params.yaml  rbkairos_ros2_control.yaml  rviz_config.rviz  sfgenerator_params.yaml
sfframework_simulation/descriptions/: rbkairos_base.urdf.xacro  rbkairos_control.urdf.xacro  rbkairos_with_lidar.urdf.xacro
sfframework_simulation/launch/: simulation_launch.py
