<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sfframework</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="joaop.gomes@usp.br">João Pedro Gomes</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>imu_transformer</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <sfframework plugin="${prefix}/sfframework_filter_plugins.xml"/>
    <sfframework plugin="${prefix}/sfframework_partitioner_plugins.xml"/>
    <sfframework plugin="${prefix}/sfframework_sf_plugins.xml"/>
  </export>
</package>
