<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sfframework_rviz</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gomes@todo.todo">gomes</maintainer>
  <license>LGPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>pluginlib</depend>
  <depend>rviz_common</depend>
  <depend>sfframework_msgs</depend>
  <depend>rviz_rendering</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
